--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
     </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
-    <!-- get from: https://www.npmjs.com/package/@aspnet/signalr -->
+    <!-- get from: https://www.npmjs.com/package/aspnet/signalr -->
     <script src="~/js/signalr.js"></script>
 
     @RenderSection("Scripts", required: false)
